# wikihistories

./: .gitignore  README.md  README.template.md  pyproject.toml  report.json  reproduction.md
.githooks/: pre-commit
data/categorisation/: aggregation_rules.csv  event_label_rules.csv  event_rules.csv  events_aggregation_rules.csv  label_rules.csv  p279.csv  rules.csv
data/poi/: bushfires.csv  climate.csv  cyclones.csv  earthquakes.csv
data/processed/: australia_daily_views.csv  australia_daily_views_manifest.json  project_stats.json
data/processed/event_views/: bushfires.csv  climate.csv  cyclones.csv  earthquakes.csv
outputs/tables/: category_distribution.csv  clickstream_top_sources.csv  event_category_distribution.csv  top_pages_australia_2019-12-30_2020-01-09.csv  top_pages_australia_2025-03-04_2025-03-09.csv  top_pages_uk_2025-03-04_2025-03-09.csv
scripts/: aggregate_pages.py  build_australia_daily_views.py  build_clickstream_impact.py  build_event_views.py  compute_project_stats.py  compute_top_pages.py  download_clickstream.py  extract_australia_pageviews.py  plot_australia_daily_views.py  plot_clickstream_shares.py  plot_event_timelines.py  update_readme.py
scripts/categorisation/: adjust_non_events.py  aggregate.py  apply_rules.py  build_p279_graph.py  build_plots.py  init_assignments.py  produce_final_csv.py
src/wikihistories/: __init__.py  australia_daily_views.py  clickstream_impact.py  clickstream_shares.py  event_timelines.py  event_views.py  project_summary.py  top_pages.py
