[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikihistories"
version = "0.1.0"
description = "Reproducible analysis for wikihistories | events project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "pandas>=2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
